[package]
name = "async_neat"
version = "0.1.0"
authors = ["PizzasBear <mx.sht06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
ron = "0.5"
serde = "1.0"
rand = "0.7"
rand_distr = "0.2"
